ex1-ex4 done